# MyUs

./: .dockerignore  CLAUDE.md  Dockerfile  docker-compose.yml  entrypoint  manage.py  readme.md  requirements.txt
myus/: CLAUDE.md  Makefile  admin.py  apps.py  consumers.py  main.py  manage.py  models.py  pyproject.toml  routing.py  urls.py  views.py
myus/api/: admin.py  apps.py  backends.py  routers.py  urls.py
myus/api/apis/: auth.py  comment.py  media.py  setting.py  user.py
myus/api/db/models/: __init__.py  base.py  channel.py  comment.py  common.py  hashtag.py  master.py  media.py  message.py  notification.py  payment.py  stripe.py  subscribe.py  user.py  users.py
myus/api/domain/: comment.py  follow.py  media.py  message.py  serach_tag.py  user.py
myus/api/management/commands/: sample.py
myus/api/migrations/: 0001_initial.py
myus/api/models/: __init__.py  base.py  comment.py  common.py  master.py  media.py  message.py  notification.py  stripe.py  user.py  users.py
myus/api/modules/: logger.py
myus/api/services/: comment.py  follow.py  media.py  message.py  notification.py  user.py
myus/api/src/: routers.py
myus/api/src/adapter/: advertise.py  auth.py  category.py  channel.py  comment.py  hashtag.py  manage.py  media.py  message.py  payment.py  setting.py  user.py
myus/api/src/containers/: __init__.py  container.py  user.py
myus/api/src/domain/: channel.py  comment.py  follow.py  index.py  media.py  message.py  notification.py  serach_tag.py  user.py
myus/api/src/injectors/: __init__.py  container.py  index.py
myus/api/src/usecase/: _convert.py  advertise.py  auth.py  broadcast.py  category.py  channel.py  comment.py  follow.py  hashtag.py  media.py  message.py  notification.py  payment.py  search_tag.py  subscribe.py  user.py  userpage.py
myus/api/tests/: test_login.py
myus/api/types/data/: auth.py  comment.py  common.py  follow.py  media.py  message.py  setting.py  user.py
myus/api/types/union/: media.py
myus/api/utils/: constant.py  contains.py  filter_data.py  plan.py
myus/api/utils/common/: __init__.py  result.py
myus/api/utils/constants/: choice.py  media.py  notification.py
myus/api/utils/decorators/: auth.py
myus/api/utils/enum/: i18n.py  index.py  media.py  notification.py  payment.py  response.py  upload.py  user.py
myus/api/utils/functions/: comment.py  encrypt.py  file.py  index.py  logger.py  map.py  media.py  search.py  token.py  user.py  validation.py
myus/api/views/: auth.py  comment.py  media.py  setting.py  user.py
myus/app/: apps.py  consumers.py  routing.py  urls.py  views.py
myus/app/ai/: analytics.py
myus/app/modules/: context_data.py  follow.py  get_form.py  notification.py  pjax.py  search.py  success_url.py
myus/app/templatetags/: class_name.py
myus/apps/myus/: admin.py  consumers.py  urls.py
myus/apps/myus/modules/: notification.py  pjax.py  search.py  validation.py
myus/config/: asgi.py  dataclass_env.py  env.py  urls.py  views.py  wsgi.py
myus/config/settings/: base.py  dev.py  local.py  prod.py
myus/modules/: context_data.py  get_form.py  search.py  success_url.py  validation.py
myus/myus/: views.py
myus/myus/convert/: convert_hls.py
myus/myus/migrations/: 0001_initial.py
myus/myus/models/: __init__.py  media.py  notification.py
myus/myus/modules/: contains.py  get_form.py
myus/myus/tests/: test_login.py
myus/requirements/: base.txt  dev.txt  requirements.txt
myus/static/css/: account.css  audio.css  base_site.css  global.css  quill.css  registration.css  userpolicy.css
myus/static/css/layout/: component.css  header.css  layout.css  main.css  sidebar.css
myus/static/js/: ajax_common.js  pjax.js  promotion.js  searchtag.js  shortcut_myus.js  textarea.js  websocket_chat.js
myus/templates/: 403.html  404.html  500.html  base2.html  index.html  index_list.html
myus/templates/admin/: base_site.html
myus/templates/icon/side_menu/: follow.html  house.html  left.html
myus/templates/icon/sidebar/: blog.html  chat.html  comic.html  music.html  picture.html  video.html
myus/templates/icon/tagnav/: left.html  right.html
myus/templates/media/blog/: blog.html  blog_article.html  blog_article_detail.html  blog_create_content.html  blog_detail.html  blog_list.html
myus/templates/media/chat/: chat_article.html  chat_create.html  chat_list.html  chat_thread.html
myus/templates/media/comic/: comic.html  comic_article.html  comic_article_detail.html  comic_create_content.html  comic_detail.html
myus/templates/media/music/: music.html  music_article.html  music_create.html  music_create_content.html  music_detail.html
myus/templates/media/picture/: picture.html  picture_article.html  picture_article_detail.html  picture_create.html  picture_create_content.html  picture_detail.html
myus/templates/media/todo/: todo.html  todo_article.html  todo_delete.html  todo_detail.html  todo_list.html  todo_update.html
myus/templates/media/video/: video.html  video_article.html  video_article_detail.html  video_detail.html  video_list.html
myus/templates/menu/: knowledge_content.html  userpolicy.html  userpolicy_content.html
myus/templates/menu/follow/: follow.html  follow_article.html  follow_list.html  follower.html  follower_article.html  follower_list.html
myus/templates/parts/: advertise_article.html  advertise_article_auto.html  author_space.html  notification_list.html  notification_setting.html
myus/templates/parts/common/: common.html
myus/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html  signup_complete.html
myus/templates/setting/: mypage.html  mypage_content.html  mypage_update.html  notification_content.html  profile_content.html  profile_update.html  withdrawal.html  withdrawal_confirm.html  withdrawal_content.html
myus/templates/setting/payment/: cancel.html  payment.html  success.html  (+1 more)
myus/templates/userpage/: userpage.html  userpage_advertise_list.html  userpage_common.html
(+2099 files in other folders)
