[project]
name = "myus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "coloredlogs>=15.0.1",
    "daphne>=4.1.2",
    "django==5.2",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-import-export>=4.3.7",
    "django-js-asset>=3.1.2",
    "django-quill-editor>=0.1.42",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "mysqlclient>=2.2.7",
    "pillow>=11.1.0",
    "python-dateutil>=2.9.0.post0",
    "python-ffmpeg-video-streaming>=0.1.16",
    "ruff>=0.11.5",
    "stripe>=12.0.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.1.0",
]

[tool.ruff]
line-length = 140

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
# quote-style = "double"

[tool.ruff.lint]
select = ["I"]
ignore = [
    "A002",
    "ANN001",
    "ARG002",
    "ANN205",
    "RET504",
    "Q000",
    "INP001",
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values

]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
